@@ -54,6 +54,8 @@ Version 0.7.4 UNRELEASED
     implementation could change in the future, and it shouldn't hurt to double
     check.
 
+  * Convert some instances of boost::unordered_{set,map,multimap} to std::
+
 
 [2015-10-07]
 Version 0.7.3
